# servo_ai

./: .env  .env.example  .env_example  .env_prd  .gitignore  .uvicornignore  Dockerfile  Dockerfile_local  README.md  compose.yml  pyproject.toml  redis.conf  requirements.txt  requirements.txt.bak1  requirements_bak.txt  run.sh  supervisord.conf  test_timeseries.py  uv.lock.bak0503
api/: .dockerignore  .env  .env.example  Dockerfile  README_CN.md  main.py  pyproject.toml  run.sh
api/src/: celery_worker.py  main.py
api/src/api/: __init__.py
api/src/celery_app/: __init__.py  tasks.py
api/src/configs/: config.py  logging_config.py
api/src/dify/: vlm_ocr.py
api/src/models/: user_model.py
api/src/routers/: __init__.py  health_check.py  task_processor.py  task_router.py  user_router.py
docker/: .env  .env.example  .env_dev.example  .env_local.example  docker-compose-template.yaml  docker-compose-template_dev.yaml  docker-compose-template_local.yaml  docker-compose.yaml  docker-compose.yml  docker-compose.yml.bak0425  docker-compose.yml.bak0427  generate_docker_compose_dev  generate_docker_compose_local  production.yml
docker/mysql/init/: init.sh  init.sql
scripts/: batch_api_requests.py  db_init.py
scripts/celery_tasks/: publish_ocr_tasks.py  publish_tasks_from_company_ids.py  publish_tasks_from_t1.py  published_business_ids.txt  t2.py  test.py
scripts/celery_tasks/0702/: extract_company_ids.py  failed.py  t1.py
scripts/compare/: data_factory1.py  data_factory2.py  data_factory3.py
scripts/dify/: vlm_ocr.py
scripts/mysql/: create_db.sql  create_tables.sql  db_init.py  insert_data.sql
scripts/redis/: readme.md  redis_delete_keys.sh
scripts/work_orker/: submit_work_orders.py  t1.txt  t2.txt  t2_work_orders.py
src/api/: main.py
src/celery_app/: __init__.py  app.py  ocr_tasks.py  subscriber_tasks.py  tasks.py  test_tasks.py
src/configs/: celery_config.py  config.py  database.py  logging_config.py
src/dify/: vlm_ocr.py
src/exceptions/: prompt_loader_exceptions.py  taxpayer_cert_exceptions.py  work_order_exceptions.py
src/middlewares/: exception_handler.py
src/models/: __init__.py  ocr_model.py  power_plant_model.py
src/prompts/: taxpayer_cert_ocr_prompt.txt  worker_order_prompt.txt
src/prompts/test/: test.txt
src/routers/: celery_demo_router.py  core_router.py  power_plant.py  task_processor.py  task_router.py  task_status.py  taxpayer_cert_router.py  timeseries_router.py  user_router.py  vlm_ocr_router.py  work_order_router.py
src/routers/ocr/: __init__.py  ocr_record_router.py  ocr_router.py  ocr_task_router.py
src/schemas/: celery_schema.py  ocr_record_schemas.py  ocr_task_schemas.py  power_plant_schemas.py  taxpayer_cert_schemas.py  timeseries_schemas.py  work_order_schemas.py
src/services/: constants.py  ocr_service.py  redis_service.py  redis_task_service.py  taxpayer_cert_service.py  test.py  test2.py  test3.py  timeseries_service.py  user_service.py  work_order_service.py
src/services/prompts/: worker_order.py
src/tools/: ocr_cert.py  prompt_loader.py
src/validators/: email_validator.py  user_validators.py
tests/test_tools/: test_prompt_loader.py
(+144 files in other folders)
