[project]
name = "servo_ai"
version = "1.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.0"
dependencies = [
    "celery==5.5.2",
    "fastapi[standard]==0.116.0",
    "pydantic-settings==2.10.1",
    "pymysql==1.1.1",
    "pandas==2.3.1",
    "pytz==2025.2",
    "redis==6.2.0",
    "requests==2.32.4",
    "sqlalchemy>=2.0.41",
    "flower==2.0.1",
    "openai==1.93.1",
    "pymupdf==1.26.3",
    "aiocache==0.12.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello = "uv_docker_example:hello"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.7",
    "pytest>=8.3.5",
]

